# poc-cli

./: .gitignore  README.md
icli/: Dockerfile  Makefile  README.md  pyproject.toml  setup.py
isi-cli/: Dockerfile  Makefile  README.md  pyproject.toml
