[tool.poetry]
name = "icli"
version = "0.1.0"
description = "General purpose CLI"
authors = ["Isidro Lopez <islomar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
